@@ -16,6 +16,7 @@ import org.bouncycastle.crypto.engines.AESEngine;
 import org.bouncycastle.crypto.paddings.PaddedBufferedBlockCipher;
 import org.bouncycastle.crypto.params.KeyParameter;
 import org.bouncycastle.util.Arrays;
+import org.opendedup.hashing.HashFunctions;
 import org.opendedup.sdfs.Main;
 
 public class EncryptUtils {
